src/style/main.css
* {
  margin: 0;
  padding: 0;
}

body {
  background: #eee;
  font-size: 16px;
  font-family: 'Open Sans', sans-serif;
}

main {
  background: #bada55;
  width: 100vw;
  height: 100vh;
}

.controls {
  top: 2rem;
  left: 2rem;
  display: flex;
  position: relative;
}

.control {
  margin-right: 1rem;
}

.control label {
  display: block;
  color: darkgreen;
  margin-bottom: 0.2rem;
  text-transform: uppercase;
}

.control input {
  font-size: 1.2rem;
  padding: 0.4rem 0.6rem;
  border-radius: 0.5rem;
  width: 3rem;
}

.count_button {
  width: 10rem;
  height: 10rem;
  background: yellow;
  border-radius: 0.4rem;
  border: 2px solid green;
  box-shadow: 1px 1px 4px 2px #557668;
  top: 45%;
  left: 45%;
  position: absolute;
}

.count_button:active {
  box-shadow: none;
  box-shadow: 1px 1px 1px 1px #557668;
}

.count_button .current_count {
  font-size: 2rem;
  font-weight: bold;
  color: darkgreen;
}

